<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerDay"
    app:cardBackgroundColor="@color/dark_blue"
    app:cardElevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_2sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_weight="1.5">

        <TextView
            android:id="@+id/forecast_day_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginRight="@dimen/_6ssp"
            android:text="@string/day"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/forecast_day_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/day"
            android:layout_marginStart="@dimen/_40sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forecast_day_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/heat_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/degree"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/celcius"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_day_icon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@color/white" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>